# EVERSPORTSGHL

./: .env.example  .gitignore  CHANGELOG.md  DEV_SPEC.md  HANDOFF.md  REVIEW_FINDINGS.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: README.md  consent-gate-auditor.md  eversports-scraper-specialist.md  ghl-workflow-architect.md  project-manager.md  qa-reviewer.md  spec-consistency-checker.md  uc-prompt-designer.md  ux-reviewer.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_contacts_bookings_sessions_sync_log.py  c3d4e5f6a7b8_add_country_to_locations.py  d3f8b2a4c1e9_initial_locations.py  d4e5f6a7b8c9_add_cookie_cache_to_locations.py  i4j5k6l7m8n9_m6_consent_audit.py  (+6 more)
app/: config.py  main.py
design/: README.md  studio-owner-ui.html  tokens.css
memory/: project_m4_complete.md
ops/: .gitkeep  Dockerfile.app  Dockerfile.scraper  docker-compose.yml
reference/: README.md
requirements_v2/: 00_master_overview.md  01_trial_conversion_followup.md  02_trial_member_tag.md  03_ghl_pipelines.md  05_sales_consultant_chatbot.md  06_reschedule_assistant.md  07_foundation_layer.md  08_consent_model.md  CHANGELOG.md
scripts/: decode_export_handler.py  find_export_endpoint.py  generate_synthetic_fixtures.py  import_cookies.py  onboard_location.py  probe_booking_list.py  probe_live_scraper.py  verify_endpoints.py
tests/: conftest.py  test_ai.py  test_bootstrap.py  test_consent.py  test_delta.py  test_gatekeeper.py  test_ghl_sync.py  test_parsers.py  test_scheduler.py  test_scraper.py  test_writeback.py
(+91 files in other folders)
