[project]
name = "eversports-ghl-connector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-click>=7.1.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["reference/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "N"]
ignore = ["B008"]   # Depends() calls in function defaults are fine in FastAPI

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
